[tool.poetry]
name = "pytest-pyspec"
version = "0.8.3"
description = "A plugin that transforms the pytest output into a result similar to the RSpec. It enables the use of docstrings to display results and also enables the use of the prefixes \"describe\", \"with\" and \"it\"."
authors = ["Felipe Curty <felipecrp@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/felipecrp/pytest-pyspec"
packages = [
    { include = "pytest_pyspec" }
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"

[tool.poetry.plugins.pytest11]
pytest_pyspec = "pytest_pyspec.plugin"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

