[project]
name = "pytest-pyspec"
version = "0.10.4"
description = 'A plugin that transforms the pytest output into a result similar to the RSpec. It enables the use of docstrings to display results and also enables the use of the prefixes "describe", "with" and "it".'
authors = [{ name = "Felipe Curty", email = "felipecrp@gmail.com" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "pytest>=9,<10",
]

[project.urls]
Repository = "https://github.com/felipecrp/pytest-pyspec"

[project.entry-points.pytest11]
pytest_pyspec = "pytest_pyspec.plugin"

[dependency-groups]
dev = ["autopep8>=2.0.2,<3"]

[tool.hatch.build.targets.sdist]
include = ["pytest_pyspec"]

[tool.hatch.build.targets.wheel]
include = ["pytest_pyspec"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--pyspec"

